
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stderr ;

void
Usage(char *arg)
{
        fprintf(stderr,"[*] Zeroboard now_connect() vulnerability Remote code execution  exploit by SpeeDr00t\n");
        fprintf(stderr,"--------------------------------------------------------------------------\n");
        fprintf(stderr,"Usage: %s <SERVER> [PORT - default : 80] \n", arg);
        fprintf(stderr,"--------------------------------------------------------------------------\n");

        exit(1);
}
